<resources>
    <string name="app_name">SaleClient</string>
    <string name="back">Geri</string>
    <string name="cash">Nakit</string>
    <string name="credit">Kredi</string>
    <string name="Sum">Ara Toplam :</string>
    <string name="Amount">0.0 TL</string>
    <string name="sell">Satış</string>
    <string name="buyProducts">Ürünleri Al</string>
    <string name="sendSales">Satışları Gönder</string>
    <string name="sellProduct">Satış Yap</string>
    <string name="connect">Bağlan</string>
    <string name="welcome">Hoşgeldiniz</string>
    <string name="IP">IP :</string>
    <string name="PORT">PORT :</string>
    <string name="Synchronize">Senkronize Et</string>
    <string name="PortAdress">7800</string>
    <string name="ipAddress">192.168.2.3</string>
    <string name="productName">Ürün ismi</string>
    <string name="priceUnit">TL</string>
</resources>